sample/retrieveUnpackaged/objects/Question__c.object
<CustomObject>
    <description>Questions to ask customers to generate Segments.</description>
    <fields>
        <fullName>API_Field__c</fullName>
        <inlineHelpText>Specify the API field name on the account object</inlineHelpText>
        <label>API Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Sub Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Internal_Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Group_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Question?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Value__c</fullName>
        <label>Maximum Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Corresponds to Q1 to Q9 on the customer. Must be sequential and contiguous.</inlineHelpText>
        <label>Order</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Sort_Display__c</fullName>
        <label>Portal Sort Display</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Portal Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Portal_Sort_Display__c</columns>
        <columns>Active__c</columns>
        <columns>Is_Group_Question__c</columns>
        <columns>Group_Question__c</columns>
        <columns>Question__c</columns>
        <columns>Type__c</columns>
        <columns>Code__c</columns>
        <columns>API_Field__c</columns>
        <columns>Internal_Visible__c</columns>
        <columns>Portal_Visible__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>